fix: 增加了对修饰器的支持

--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,13 @@
     "plugins": [
         ["@babel/transform-runtime"],
         "@babel/plugin-syntax-dynamic-import",
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+            "legacy": true
+            }
+        ],
         "@babel/plugin-proposal-class-properties"
+        
     ]
 }
