fix: 修复了对多model创建的支持以及antd的按需加载问题,下期将重点修复cssModel的支持

--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,12 @@
             "legacy": true
             }
         ],
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-class-properties",
+        ["import", {
+            "libraryName": "antd",
+            "libraryDirectory": "es",
+            "style": "css" // `style: true` 会加载 less 文件
+        }]
         
     ]
 }
