--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.12.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
